# todolist

./: .gitignore  pyproject.toml
app/: db.sqlite3
app/app/: settings.py  urls.py
app/templates/: base.html  home.html  todo.html
app/templates/account/: base.html  login.html  signup.html
app/todo/: admin.py  models.py  urls.py  views.py
app/todo/migrations/: 0001_initial.py  0002_delete_user.py
app/user/: models.py
app/user/migrations/: 0001_initial.py
