[tool.poetry]
name = "django-todo"
version = "0.1.0"
description = ""
authors = ["Dendy <fr.dendydwi@impstudio.co.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-widget-tweaks = "^1.5.0"
django-template-partials = "^23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
